Closed
Bug 548983
Opened 16 years ago
Closed 16 years ago
Option Dialog choice wrong font when DirectWrite Enabled
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: ayakawa.m, Assigned: jtd)
References
Details
Attachments
(2 files)
|
226.76 KB,
image/png
|
Details | |
|
1.63 KB,
patch
|
bas.schouten
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 6.1; ja; rv:1.9.3a2pre) Gecko/20100226 Minefield/3.7a2pre
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 6.1; ja; rv:1.9.3a2pre) Gecko/20100226 Minefield/3.7a2pre
When default font is no ASCII name(ex. メイリオ,MS Pゴシック),
Option Dialog choice wrong font or no choice.
Reproducible: Always
Steps to Reproduce:
1. disable DirectWrite and restart Fx
2. open OptionDialog
3. click content
4. set Default Font with no ASCII name
5. enable DirectWrite and restart Fx
6. open OptionDialoig
Actual Results:
Default font is wrong font
Expected Results:
show selected font
| Reporter | ||
Comment 1•16 years ago
|
||
| Assignee | ||
Updated•16 years ago
|
Component: Preferences → Graphics
Product: Firefox → Core
QA Contact: preferences → thebes
Version: unspecified → Trunk
| Assignee | ||
Updated•16 years ago
|
Assignee: nobody → jdaggett
Comment 2•16 years ago
|
||
(In reply to comment #1)
> Created an attachment (id=429257) [details]
> Option Dialog GDI ver. and DirectWrite ver.
Hrm, I though we fixed this! Any idea where this was broken again John?
| Assignee | ||
Comment 3•16 years ago
|
||
(In reply to comment #2)
> (In reply to comment #1)
> > Created an attachment (id=429257) [details] [details]
> > Option Dialog GDI ver. and DirectWrite ver.
>
> Hrm, I though we fixed this! Any idea where this was broken again John?
Yup, I included a patch (bug 527707, comment 161) that fixed it but you never put it into your patch. Just need to define gfxDWriteFontList::GetStandardFamilyName.
Attachment #429375 -
Flags: review?(bas.schouten)
Updated•16 years ago
|
Attachment #429375 -
Flags: review?(bas.schouten) → review+
Comment 4•16 years ago
|
||
Comment on attachment 429375 [details] [diff] [review]
patch, v0.1, define GetStandardFamilyName
>diff --git a/gfx/thebes/src/gfxDWriteFontList.cpp b/gfx/thebes/src/gfxDWriteFontList.cpp
>--- a/gfx/thebes/src/gfxDWriteFontList.cpp
>+++ b/gfx/thebes/src/gfxDWriteFontList.cpp
>@@ -514,8 +514,22 @@ gfxDWriteFontList::InitFontList()
> nsDependentString(famName.Elements()),
> family);
> fontList->mFontFamilies.Put(name, fam);
> }
> }
>
> StartLoader(kDelayBeforeLoadingFonts, kIntervalBetweenLoadingFonts);
> }
>+
>+
Looks good to me! Seems like we should only need one newline here though?
| Assignee | ||
Comment 5•16 years ago
|
||
Pushed to trunk
http://hg.mozilla.org/mozilla-central/rev/16e2bf477e1b
Status: UNCONFIRMED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•