Bug 548983.  Override GetStandardFamilyName for the DWrite font list. r=bas